# gdsync

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: dev_install.sh
src/gdsync/: cli.py  constants.py
src/gdsync/commands/: ask.py  auth.py  init.py  pull.py  purge.py  push.py  run.py  status.py
src/gdsync/config/: global_cfg.py  project.py  state.py
src/gdsync/core/: auth.py  drive.py  executor.py  planner.py
